# misis2024s-21-03-zhukova-a-v

./: CMakeLists.txt  README.md  status.md
prj.cw/: CMakeLists.txt
prj.cw/src/: CMakeLists.txt  ClassicMeasures.h  CohinKappaMetric.h  ContigencyTable.h  DiceCoefficient.h  ErrorImageGenerator.h  GlobalConsistencyError.h  GroundTruthGenerator.h  ImageReader.h  JaccardCoefficientMetric.h  RandIndexMetric.h  Segmentation.h  analytics.py  test.cpp  test.json
prj.data/: CMakeLists.txt
prj.data/lab06/: parameters_0.json  parameters_1.json  parameters_2.json  parameters_3.json  parameters_4.json
prj.lab/: CMakeLists.txt
prj.lab/lab01/: CMakeLists.txt  lab01.cpp  lab_1.md
prj.lab/lab02/: CMakeLists.txt  lab02.cpp  lab_2.md
prj.lab/lab03/: CMakeLists.txt  lab03.cpp  lab_3.md
prj.lab/lab04/: CMakeLists.txt  README.md  cnctd_comps_detector.cpp  cnctd_comps_detector.h  evaluator.cpp  evaluator.h  image_generator.cpp  image_generator.h  lab04.cpp  lab04.md  log_detector.cpp  log_detector.h  main.cpp
prj.lab/lab05/: CMakeLists.txt  cmake_install.cmake  lab05.cpp  lab05.md  lab05.vcxproj  lab05.vcxproj.filters
prj.lab/lab05/lab05.dir/Debug/: lab05.exe.recipe  lab05.ilk
prj.lab/lab05/lab05.dir/Debug/lab05.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  lab05.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
prj.lab/lab07/: CMakeLists.txt  ContigencyTable.h  ImageStatistics.h  MetricConstants.h  Outputter.h  README.md  ground_truth_generator.h  lab07.cpp  lab07.md  segmentation.h
prj.lab/lab08/: CMakeLists.txt  README.md  lab08.cpp
